--- a/templates/search.html
+++ b/templates/search.html
@@ -9,8 +9,7 @@
     <h2>Zip Code: {{ zipCode }}</h2>
     <h2>Population: {{ population }}</h2>
 
-    <form action="/" method="get">
-        <button type="submit">Return to Main Page</button>
+    <button onclick="window.location.href='/';">Return to Main</button>
     </form>
 </body>
 </html>
